--- a/build.xml
+++ b/build.xml
@@ -58,7 +58,7 @@
 	<target name="actualizarEsquema">
 		<ant antfile="../OpenXava/build.xml" target="updateSchemaJPA">
 			<property name="persistence.unit" value="junit" />
-			<property name="schema.path" value="../../tomcat/lib/postgresql-9.4.1210.jre7.jar" />
+			<property name="schema.path" value="../../tomcat/lib/postgresql-42.2.2.jar" />
 		</ant>
 	</target>
 
